<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="8dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ivPhoto"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/sample_photo"/>

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/ivPhoto"
        app:layout_constraintTop_toTopOf="@+id/ivPhoto"
        app:layout_constraintBottom_toTopOf="@id/tvEmail"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/redhatdisplay_medium"
        android:textColor="@color/techno_turqoise"
        android:textSize="18sp"
        android:text="@string/tvDummyName"/>

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/tvName"
        app:layout_constraintTop_toBottomOf="@+id/tvName"
        app:layout_constraintBottom_toTopOf="@+id/tvPhoneNum"
        android:fontFamily="@font/redhatdisplay_medium"
        android:textColor="@color/fresh_blue"
        android:textSize="14sp"
        android:text="@string/tvDummyEmail"/>

    <TextView
        android:id="@+id/tvPhoneNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/tvName"
        app:layout_constraintTop_toBottomOf="@+id/tvEmail"
        app:layout_constraintBottom_toTopOf="@+id/tvTeam"
        android:fontFamily="@font/redhatdisplay_medium"
        android:textColor="@color/fresh_blue"
        android:textSize="14sp"
        android:text="@string/tvDummyPhoneNum"/>

    <TextView
        android:id="@+id/tvTeam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/tvName"
        app:layout_constraintTop_toBottomOf="@+id/tvPhoneNum"
        app:layout_constraintBottom_toTopOf="@+id/tvType"
        android:fontFamily="@font/redhatdisplay_medium"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:text="@string/tvDummyTeam"/>

    <TextView
        android:id="@+id/tvType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/tvName"
        app:layout_constraintTop_toBottomOf="@+id/tvTeam"
        app:layout_constraintBottom_toBottomOf="@id/ivPhoto"
        android:fontFamily="@font/redhatdisplay_medium"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:text="@string/tvDummyEmployeeType"/>

    <View
        android:id="@+id/assetBorder"
        android:layout_width="0dp"
        android:layout_height="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvType"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="12dp"
        android:background="@color/roman_silver"/>

</androidx.constraintlayout.widget.ConstraintLayout>